feat(): add environment id on Plan, Keys and subscriptions
  - add environments to be able to properly filter plan, keys and subscriptions based on environments
  - fix security issue on gateway sync